k8s-resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toornament-csgo
  namespace: kanarod
spec:
  selector:
    matchLabels:
      app: toornament-csgo
  replicas: 1
  template:
    metadata:
      labels:
        app: toornament-csgo
    spec:
      containers:
        - name: toornament-csgo
          image: quay.io/jlehtimaki/toornament-csgo
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: toornament-csgo
  namespace: kanarod
spec:
  selector:
    app: toornament-csgo
  ports:
    - port: 8080
      targetPort: 8080
